--- a/src/Components/Header/styles.css
+++ b/src/Components/Header/styles.css
@@ -74,6 +74,9 @@
 	border-radius: 1rem 0rem 0rem 1rem;
 	padding: 1rem 1.75rem;
 }
+.search-bar:focus {
+	outline: none;
+}
 
 .search-icon-container {
 	border-radius: 0rem 1rem 1rem 0rem;
