--- a/src/Components/VideoCard/videoCard.css
+++ b/src/Components/VideoCard/videoCard.css
@@ -1,5 +1,6 @@
 .card-container {
-	max-height: 35vh;
+	min-height: 30vh;
+	max-height: 40vh;
 	width: 15vw;
 	/* height: 100%;
 	width: 100%; */
@@ -10,6 +11,7 @@
 	flex-direction: column;
 	justify-content: space-between;
 	position: relative;
+	font-family: "Poppins", sans-serif;
 }
 .card-thumbnail-container {
 	flex-grow: 1;
