style: added auth pages styles

--- a/src/Components/Auth/styles.css
+++ b/src/Components/Auth/styles.css
@@ -1,5 +1,189 @@
-.login-container {
+.form-container {
+	width: 100%;
+	font-family: "Poppins", sans-serif;
+	display: flex;
+	justify-content: center;
+}
+
+.form-main {
+	width: 80%;
 	min-height: 90vh;
-	background-color: rgb(255, 84, 246);
-	grid-area: main-app-area;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	margin: 1rem 0;
+}
+.form-card {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	padding: 1rem;
+	background-color: var(--back-card);
+	border-radius: 3rem;
+}
+.form-head {
+	font-size: 3.5rem;
+	color: var(--head-primary);
+	padding: 1.5rem 1rem;
+	letter-spacing: 0.05rem;
+	text-align: center;
+}
+.form-field-container {
+	width: 30vw;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: center;
+	padding: 0 2rem 2rem 2rem;
+	background-color: var(--back-card);
+}
+
+.input-control {
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: stretch;
+	margin: 0.5rem 0rem;
+	color: #fa143b;
+	font-size: 1.25rem;
+	font-weight: 500;
+	letter-spacing: 0.05rem;
+	flex-wrap: wrap;
+}
+.input-field-container {
+	width: 100%;
+	display: flex;
+	border-radius: 3rem;
+	border: 0.3rem solid var(--head-secondary);
+	background-color: var(--head-primary);
+	margin: 0 0 1rem 0;
+	transition: all 0.25s ease;
+}
+.input-field-container:focus-within {
+	border: 0.3rem solid var(--primary);
+	transition: all 0.25s ease;
+}
+
+.form-label {
+	font-size: 1.6rem;
+	font-weight: 600;
+	color: var(--head-primary);
+	padding: 0.75rem 0rem;
+}
+
+.error-container {
+	width: 100%;
+	color: #fa143b;
+	font-size: 1.25rem;
+	font-weight: 500;
+	letter-spacing: 0.05rem;
+	display: flex;
+	flex-direction: column;
+	flex-wrap: wrap;
+}
+.input-field {
+	font-family: "Poppins", sans-serif;
+	width: 100%;
+	border-radius: 3rem;
+	padding: 1.5rem;
+	background-color: var(--head-primary);
+}
+.input-field::placeholder {
+	font-size: 1.25rem;
+	font-weight: 500;
+	letter-spacing: 0.1rem;
+	color: #9e9e9e;
+}
+.input-field:focus {
+	outline: none;
+}
+.input-pass-field {
+	font-family: "Poppins", sans-serif;
+	border-radius: 3rem 0rem 0rem 3rem;
+	padding: 1.5rem;
+	background-color: var(--head-primary);
+}
+.input-pass-field:focus {
+	outline: none;
+}
+.input-pass-field::placeholder {
+	font-size: 1.25rem;
+	font-weight: 500;
+	letter-spacing: 0.1rem;
+	color: var(--head-primary);
+}
+
+.input-pass-cta {
+	display: block;
+	background-color: transparent;
+	color: var(--primary);
+	background-color: var(--head-primary);
+	padding: 1rem 1.5rem;
+	border-radius: 0rem 3rem 3rem 0rem;
+	cursor: pointer;
+}
+
+.width100 {
+	width: 100%;
+}
+
+.input-grid {
+	display: grid;
+	grid-template-columns: 10fr 0.5fr;
+	border-radius: 2rem;
+	background-color: transparent;
+}
+
+.form-submit-cta {
+	display: block;
+	width: 100%;
+	cursor: pointer;
+	padding: 1.75rem;
+	border-radius: 3rem;
+	margin: 2.5rem 0rem 2.5rem 0rem;
+	background-color: var(--primary);
+	color: var(--head-primary);
+	font-family: "Poppins", sans-serif;
+	font-size: 2rem;
+	font-weight: 600;
+	letter-spacing: 0.1rem;
+}
+.hide-cta {
+	font-size: 2rem;
+}
+.form-text {
+	font-size: 1.45rem;
+	font-weight: 600;
+	letter-spacing: 0.05rem;
+	color: var(--head-primary);
+}
+.form-links {
+	text-decoration: none;
+	font-size: 1.45rem;
+	font-weight: 600;
+	letter-spacing: 0.05rem;
+	color: var(--primary);
+	margin: 0 0 0 0.5rem;
+	transition: text-decoration 0.5s ease;
+}
+.form-links:hover {
+	text-decoration: underline;
+	transition: text-decoration 0.5s ease;
+}
+
+.marginTop1 {
+	margin-top: 0.5rem;
+}
+@media screen and (max-width: 1024px) {
+	.form-main {
+		width: 95%;
+	}
+	.form-card {
+		box-shadow: none;
+	}
+	.form-field-container {
+		width: auto;
+		padding: 0 1rem 1rem 1rem;
+	}
 }
