--- a/src/Components/VideoPages/History/styles.css
+++ b/src/Components/VideoPages/History/styles.css
@@ -105,6 +105,7 @@
 	font-size: 1.65rem;
 	font-weight: 500;
 	letter-spacing: 0.05rem;
+	color: var(--primary);
 }
 .flat-card-title {
 	text-decoration: none;
@@ -134,6 +135,7 @@
 	font-size: 2rem;
 	font-weight: 500;
 	letter-spacing: 0.1rem;
+	text-align: center;
 }
 @media screen and (max-width: 880px) {
 	.flat-card-img {
